--- a/plugin.xml
+++ b/plugin.xml
@@ -12,9 +12,11 @@
     </js-module>
 
     <platform name="android">
-        <preference name="APPLICATION_ID" default="xxx" />
-        <preference name="PLAY_SERVICES_VERSION" default="18.3.0"/>
-        <preference name="FACEBOOK_MEDIATION_VERSION" default="5.6.0.0"/>
+           
+            
+        <preference name="APPLICATION_ID" default="ca-app-pub-6681943608991578~5507143903" />
+        <preference name="PLAY_SERVICES_VERSION" default="19.5.0"/>
+        <preference name="FACEBOOK_MEDIATION_VERSION" default="6.2.0.0"/>
         <source-file src="src/android/src/com/creativeads/AdService.java" target-dir="src/com/creativeads"/>
         <source-file src="src/android/src/com/creativeads/AdBanner.java" target-dir="src/com/creativeads"/>
         <source-file src="src/android/src/com/creativeads/AbstractAdBanner.java" target-dir="src/com/creativeads"/>
@@ -27,7 +29,7 @@
         <source-file src="src/android/src/com/creativeads/admob/AdInterstitialAdMob.java" target-dir="src/com/creativeads/admob"/>
         <source-file src="src/android/src/com/creativeads/admob/AdRewardedAdMob.java" target-dir="src/com/creativeads/admob"/>
         <source-file src="src/android/src/com/creativeads/admob/AdMobUtils.java" target-dir="src/com/creativeads/admob"/>
-        
+          
         <source-file src="src/android/src/com/creativeads/admob/AdServiceAdMob.java" target-dir="src/com/creativeads/admob"/>
         <source-file src="src/android/src/com/creativeads/cordova/AdMobPlugin.java" target-dir="src/com/creativeads/cordova"/>
         <source-file src="src/android/src/com/creativeads/cordova/AdServicePlugin.java" target-dir="src/com/creativeads/cordova"/>
@@ -48,18 +50,30 @@
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
         </config-file>
 
-        <config-file parent="/manifest/application" target="AndroidManifest.xml">
+     <config-file parent="/manifest/application" target="AndroidManifest.xml">
             <!-- <application 
                 xmlns:tools="http://schemas.android.com/tools"
                 tools:replace="android:appComponentFactory" /> -->
-            <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID" android:value="$APPLICATION_ID" />
-            <activity android:name="com.google.android.gms.ads.AdActivity"
-                      android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-        </config-file>
+             <meta-data android:name="com.google.android.gms.ads.APPLICATION_ID" android:value="ca-app-pub-6681943608991578~5507143903" />
+            <meta-data android:name="com.google.android.gms.ads.flag.rtb_enabled" android:value="true"/>
+            <activity android:name="com.google.android.gms.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+            <activity android:name="com.facebook.ads.AudienceNetworkActivity" android:configChanges="keyboardHidden|orientation|screenSize" />
+       </config-file>
 
-        <framework src="com.google.android.gms:play-services-ads:$PLAY_SERVICES_VERSION" />
+         <framework src="android/build-extras.gradle" custom="true" type="gradleReference" />
+
+        <framework src="com.google.android.gms:play-services-ads:$PLAY_SERVICES_VERSION" />       
         <framework src="com.google.ads.mediation:facebook:$FACEBOOK_MEDIATION_VERSION" />
-        <framework src="android/build-extras.gradle" custom="true" type="gradleReference" />
+        <framework src="com.facebook.android:audience-network-sdk:6.2.0'" />
+        <framework src="com.google.ads.mediation:applovin:9.14.6.0" />
+        <framework src="com.google.ads.mediation:adcolony:4.3.0.0" />
+        <framework src="com.google.ads.mediation:ironsource:7.0.3.1.0" />
+            
+            
+        
+
+
+
     </platform>
    
 </plugin>
